external-crates/move/crates/move-package-alt/tests/data/invalid_identifier_package_name/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: TOML parse error at line 2, column 8
  |
2 | name = "®´∑œ"
  |        ^^^^^^^^^^^
Invalid identifier '®´∑œ'
